@@ -13,6 +13,9 @@ def main(conf_dir, pid_dir, log_dir, action):
     if not os.path.exists(pid_dir):
         os.makedirs(pid_dir)
 
+    # Update Python path so configurations can extend each other.
+    sys.path.append(conf_dir)
+
     for filename in sorted(files):
         if re_ignore.search(os.path.basename(filename)):
             continue
@@ -23,8 +26,6 @@ def main(conf_dir, pid_dir, log_dir, action):
             # "pyc"-like files in /etc/gunicorn.d which we then try and parse.
             CONFIG = imp.load_source(filename, filename).CONFIG
         else:
-            # Update Python path so configurations can extend each other.
-            sys.path.append(conf_dir)
             exec open(filename).read()
 
         config = Config(filename, pid_dir, log_dir, CONFIG)
